2006-11-18  Djihed Afifi <djihed@gmail.com> 

	* ar.po: Added Arabic Translation.
	* LINGUAS: Added ar.

2006-11-13  Sven Neumann  <sven@gimp.org>

	* removed obsolete update.sh script.

2006-11-13  Jakub Friedl <jfriedl@suse.cz>

	* cs.po: Updated Czech translation

2006-11-07  Marco Ciampa  <ciampix@libero.it>

	* it.po: updated italian translation.

2006-11-06  Marco Ciampa  <ciampix@libero.it>

	* it.po: updated italian translation.

2006-11-01  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation.

2006-10-30  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-28  Alexander Shopov  <ash@contact.bg>

	* bg.po: Updated Bulgarian translation by
	Victor Dachev <vdachev@gmail.com>

2006-10-27  Jakub Friedl <jfriedl@suse.cz>

	* cs.po: Updated Czech translation

2006-10-27  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-27  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-24  Francisco Javier F. Serrador  <serrador@openshine.com>

	* es.po: Updated Spanish translation and merging with Francisco
	Vila's translation.

2006-10-23  Michael Natterer  <mitch@gimp.org>

	* POTFILES.in: added plug-ins/common/antialias.c

2006-10-19  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* ca.po: Updated Catalan translation by
	Quim Perez <noguer@gmail.com>

2006-10-18  Jakub Friedl <jfriedl@suse.cz>

	* cs.po: Updated Czech translation

2006-10-16  Pema Geyleg  <pgeyleg@gmail.com>

	* dz.po: Updated Dzongkha Translation

2006-10-15  Ilkka Tuohela  <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2006-10-12  Alexandre Prokoudine <alexandre.prokoudine@gmail.com>
	
	* ru.po: Updated Russian translation by

2006-10-11  Žygimantas Beručka  <zygis@gnome.org>

	* lt.po: Updated Lithuanian translation.

2006-10-04  Marco Ciampa  <ciampix@libero.it>

	* it.po: updated italian translation

2006-10-02  Jakub Friedl <jfriedl@suse.cz>
