@@ -1,3 +1,7 @@
+2006-11-23  Sven Neumann  <sven@gimp.org>
+
+	* POTFILES.in: updated
+
 2006-11-18  Djihed Afifi <djihed@gmail.com> 
 
 	* ar.po: Added Arabic Translation.
